# This file is used to configure your project.
# Read more about the various options under:
# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = nlpia
description = Natural Language Processing in Action examples, data, and utilities
author = Hobson Lane, Cole Howard, Hannes Hapke, Zachary Kent
author-email = nlpia@totalgood.com
license = mit
url = http://github.com/totalgood/nlpia
long-description = README.rst
# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any
# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.5
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Text Processing :: Linguistic
    Topic :: Text Processing :: Filters
    Topic :: Text Processing :: General
    Topic :: Text Processing :: Indexing
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir =
    =src
# Project dependencies (unversioned, semicolon-separated)
install_requires = future; jupyter; h5py; matplotlib; nltk; pandas; pypandoc; plotly; cufflinks; python-Levenshtein; scikit-learn; scipy; seaborn; tqdm; gensim; pandas-datareader; pugnlp
# Add here test requirements (semicolon-separated)
tests_require = pytest; pytest-cov; pyscaffold; sphinx

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
# Add here additional requirements for extra features, to install with:
# `pip install nlpia[voice]` like:
twitter = tweepy; twython
deep = keras; tensorflow; annoy; gensim
chat = aichat; will; redis; ChatterBot; lxml; aiml; aichat
all = nlpia[deep]; nlpia[chat]; nlpia[twitter]

[tool:pytest]
testpaths =
    tests
console_output_style =
    progress
doctest_optionflags =
    -o ELLIPSIS
    -o NORMALIZE_WHITESPACE
norecursedirs =
    src/nlpia/book
    src/book
    book
    dist
    build
    .tox
addopts =
    --doctest-modules
    --cov nlpia --cov-report term-missing
    --verbose
    --progress

#  python_files (args)      glob-style file patterns for Python test module discovery
#  python_classes (args)    prefixes or glob names for Python test class discovery
#  python_functions (args)  prefixes or glob names for Python test function and method discovery
#  junit_suite_name (string) Test suite name for JUnit report
#  doctest_encoding (string) encoding used for doctest files
#  cache_dir (string)       cache directory path.
#  filterwarnings (linelist) Each line specifies a pattern for warnings.filterwarnings. Processed after -W and --pythonwarnings.
#  log_print (bool)         default value for --no-print-logs
#  log_level (string)       default value for --log-level
#  log_format (string)      default value for --log-format
#  log_date_format (string) default value for --log-date-format
#  log_cli (bool)           enable log display during test run (also known as "live logging").
#  log_cli_level (string)   default value for --log-cli-level
#  log_cli_format (string)  default value for --log-cli-format
#  log_cli_date_format (string) default value for --log-cli-date-format
#  log_file (string)        default value for --log-file
#  log_file_level (string)  default value for --log-file-level
#  log_file_format (string) default value for --log-file-format
#  log_file_date_format (string) default value for --log-file-date-format
#  addopts (args)           extra command line options
#  minversion (string)      minimally required pytest version


[test]
# py.test options when running `python setup.py test`
addopts =
    -c pytest.ini



[aliases]
docs = build_sphinx
release = sdist bdist_wheel --universal upload

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[build_sphinx]
source_dir = docs
build_dir = docs/_build

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no-vcs = 1
formats = bdist_wheel

[flake8]
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[pyscaffold]
# PyScaffold's parameters when the project was created.
# This will be used when updating. Do not change!
version = 3.0
package = nlpia
extensions =
    travis
    pre_commit
    tox
